Changes in quota-tools from 3.14 to 3.15
* added option -A to quota(1) to report all NFS mountpoints (Jan Kara)
* fixed XFS handling to work with loopback mounted devices (Jan Kara)
* fixed mountpoints scanning to make XFS -x delete command work (Jan Kara)
* fixes of signed vs unsigned int issues (Jan Kara)
* fixed a format string bug in reporting of raw grace times in repquota (Jan Kara)
* added repquota(8) option for better parsable output (Jan Kara)
* fixed error handling in edquota(8) when creating tmp file (Jan Kara)

Changes in quota-tools from 3.13 to 3.14
* updated Polish translations (Jakub Bogusz)
* print user/group names in error messages when cannot get quota information (Michal Marek, Jan Kara)
* added option --always-resolve to force resolving even names with digits only (Jan Kara)
* minor language corrections in manpages (Jan Kara)
* implemented long options parsing for all quota tools (Jan Kara)
* quota(1) has -f option to specify filesystem list (Jan Kara)
* corrected some informal language in messages (Jan Kara)
* we cannot even stat NFS mounts in local mode as server may be unreachable (Jan Kara)
* fixed error messages in getprivs() (Jan Kara, Brian Morris)
* made UID/GID prints unsigned (Matthew Kent)
* fixed very verbose printing for quotacheck (Jan Kara)
* fixed off-by-one bug in mount options parsing (Jan Kara)
* implemented nicer message formatting for warnquota(8) (Jan Kara)
* quota(1) has -w option to supress line wrapping for long device names (Jan Kara)
* quota(1) prints grace time even if hard limit is reached (Jan Kara)
* fixed journaled quota format detection in quotacheck (Jan Kara)

Changes in quota-tools from 3.12 to 3.13
* fixed mistakes in several error messages, improved error reporting functions
  (Dmitry V. Levin)
* volume label and UUID support for reiserfs (Jan Kara)
* support for LABEL= and UUID= on a command line (Jan Kara)
* parse NFSD export table to find pseudofilesystem root for NFSv4 (Jan Kara)