@@ -1,4 +1,6 @@
 Changes in quota-tools from 3.14 to 3.15
+* fixed some more problems XFS quotaon (Kouta Ooizumi, Jan Kara)
+* fixed two mistakes in quotaon(8) manpage (Utako Kusaka)
 * added option -A to quota(1) to report all NFS mountpoints (Jan Kara)
 * fixed XFS handling to work with loopback mounted devices (Jan Kara)
 * fixed mountpoints scanning to make XFS -x delete command work (Jan Kara)
